--- a/estilo.css
+++ b/estilo.css
@@ -17,7 +17,7 @@ box-sizing: border-box;
 
 
 body{
-    background-color: lightgrey;
+    background-color: white;
 }
 
 
@@ -73,6 +73,8 @@ h2{
     justify-content: space-evenly;
     gap: 2vw;
     padding: 0 1vw;
+    margin-top: 15em;
+    margin-bottom: 15em;
 }
 
 .folder-supermercado{
@@ -81,7 +83,8 @@ h2{
     justify-content: space-evenly;
     gap: 2vw;
     padding: 0 1vw;
-    margin-top: 40px;
+    margin-top: 15em;
+    margin-bottom: 15em;
 }
 
 .logo{
@@ -136,3 +139,4 @@ main{
     display: flex;
     justify-content:center;
 }
+ 
