--- a/estilo.css
+++ b/estilo.css
@@ -2,6 +2,12 @@
 margin: 0;
 box-sizing: border-box;
 }
+/*Configuração geral de interface*/
+.interface{
+     max-width: 1350px;
+    padding: 0 4%;
+    margin: 0 auto;
+}
 
 .container-menu{
     background-image: linear-gradient(to right, black, rgb(65, 12, 65));
@@ -29,7 +35,6 @@ h1{
 
 }
 
-
     
 
 h2{
@@ -47,6 +52,7 @@ h2{
 
 .lista-nav{
     overflow: hidden;
+    
 }
 .lista-nav .item-nav{
     
@@ -58,6 +64,7 @@ h2{
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  
 }
 
 
@@ -75,6 +82,7 @@ h2{
     padding: 0 1vw;
     margin-top: 15em;
     margin-bottom: 15em;
+    background-color: #b9b7b9;
 }
 
 .folder-supermercado{
@@ -113,7 +121,7 @@ main{
     margin-top: 30px;
 }
 
-.foto{
+/*.foto{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -134,9 +142,51 @@ main{
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
+}*/
 .sobre{
     display: flex;
     justify-content:center;
+    margin-top: 150px;
 }
+
+.contato{
+    display: flex;
+    margin-top: 15em;
+    margin-bottom: 15em;
+}
+ .contato a{
+    color: rgb(218, 4, 4);
+ }
+ .projetos{
+    background-color: #777377;
+ }
+ /*configuração da seção sobre mim*/
+
+ .sessao-sobremim{
+   padding:  80px 0;
+ }
  
+ .sessao-sobremim > .interface{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 96px;
+ }
+ h1.titulo1{
+    font-size: 4rem;
+    color: black;
+ }
+ h1.titulo1 span{
+    color: rgb(118, 5, 184);;
+ }
+ .sessao-sobremim .interface .texto-sobre p{
+    text-align: left;
+    font-size: 2rem;
+ }
+ .minha-foto{
+    width: 500px;
+    height: 600px;
+    display: flex;
+    box-shadow: 5px 5px 5px black;
+    border: 2px  solid black;
+ }
