--- a/estilo.css
+++ b/estilo.css
@@ -30,7 +30,7 @@ body{
 
 h1{
     text-align: center;
-    color: rgb(80, 26, 97);
+    color: rgb(118, 5, 184);
     margin-top: 120px;
 
 }
@@ -82,7 +82,6 @@ h2{
     padding: 0 1vw;
     margin-top: 15em;
     margin-bottom: 15em;
-    background-color: #b9b7b9;
 }
 
 .folder-supermercado{
@@ -157,9 +156,7 @@ main{
  .contato a{
     color: rgb(218, 4, 4);
  }
- .projetos{
-    background-color: #777377;
- }
+ 
  /*configuração da seção sobre mim*/
 
  .sessao-sobremim{
@@ -177,7 +174,7 @@ main{
     color: black;
  }
  h1.titulo1 span{
-    color: rgb(118, 5, 184);;
+    color: rgb(118, 5, 184);
  }
  .sessao-sobremim .interface .texto-sobre p{
     text-align: left;
@@ -190,3 +187,71 @@ main{
     box-shadow: 5px 5px 5px black;
     border: 2px  solid black;
  }
+ /*Estilo do Contato/Formulario*/
+section.contato{
+    padding: 80px 0;
+}
+.contato > .interface{
+    display: flex;
+    justify-content: space-between;
+}
+.contato .txt-contato p{
+    color: black;
+    font-size: 2rem;
+    display: flex;
+    gap: 16px;
+    margin: 16px 0;
+}
+.contato .txt-contato a{
+    color: black;
+    font-size: 2rem;
+     display: flex;
+    gap: 16px;
+    margin: 16px 0;
+}
+i{
+    color: rgb(118, 5, 184);
+}
+
+.contato form{
+    width: 50%;
+}
+.contato form input{
+    width: 100%;
+    padding: 16px 10px;
+    border: 2px solid rgb(118, 5, 184);
+    outline: none;
+    margin-bottom: 2px;
+    color: black;
+    background: transparent;
+    font-size: 1.2rem;
+    border-radius: 10px;
+}
+.contato form .tel-serv select{
+    width: 100%;
+    padding: 16px 10px;
+    border: 2px solid rgb(118, 5, 184);
+    border-radius: 10px;
+    margin-bottom: 2px;
+    font-size: 1.2rem;
+}
+ textarea{
+    width: 100%;
+    height: 150px;
+    padding: 16px 10px;
+    border: 2px solid rgb(118, 5, 184);
+    border-radius: 10px;
+    margin-bottom: 2px;
+    font-size: 1.2rem;
+    resize: none;
+} 
+.btn-enviar{
+    cursor: pointer;
+}
+.btn-enviar :hover{
+    background-image: linear-gradient(to right, black, rgb(65, 12, 65));
+    color: white;
+    transition: 2s;
+} .contato .txt-contato > h1{
+    margin: 0;
+}
